--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -76,6 +76,10 @@ nav a{
 
 @media only screen and (max-width: 480px){
     /* CSS ruleset */
+    nav{
+      margin:0;
+      /*padding-right: 24px;*/
+    }
     header nav a{
       display: none;
     }
@@ -109,7 +113,7 @@ main{
 
 .banner img{
   width: 100%;
-  height: 100%;
+  /*height: 100%;*/
 }
 
 .right-side{
@@ -161,29 +165,37 @@ main{
   }
 
   .learn-img-container{
-    /*height: 180px;*/
     background-color: #9b9b9b;
     margin: 0;
     width: 100%;
+    background-image: url(../../resources/images/banner.jpg);
+    background-size: cover;
   }
 
   .banner{
     display: flex;
     flex-direction: column;
-    /*margin-bottom: 32px;*/
     padding: 0;
   }
 
   .right-side{
-    padding: 0;
-  }
+    display: flex;
+    align-items: left;
+    margin: 0;
+    padding: 0 0 0 16px;
+   }
 
   .right-side h1{
-    margin: 32px auto 32px 16px;
+    margin: 32px 0 32px 0;
+    padding: 0;
+    text-align: left;
+    font-size: 1.5em;
   }
 
   .right-side h2{
     margin: 0px;
+    text-align: left;
+    font-size: 1.1em;
   }
 
   .start-button{
@@ -326,7 +338,7 @@ main{
   display: flex;
   flex-direction: column;
   background-color: white;
-  /*flex-grow: 1;*/
+  min-width: 200px;
   max-width: 26%;
   margin: 16px;
 }
@@ -348,7 +360,7 @@ main{
   padding-top: 1em;
   font-size: 1.5em;
   margin-left: 16px;
-  font-weight: 500;
+  font-weight: 600;
 }
 
 .course-img-name h3{
@@ -385,16 +397,27 @@ main{
     background-color: #d8d8d8;
   }
 
-  .course-img img, h3, h4 {
+  .course-img img{
+     display: none;
+   }
+
+  .course-img-name h3{
+     display: none;
+   }
+
+  .course h4
+  {
     display: none;
   }
 
   .course-img h2{
     margin: 0 0 0 0;
+
   }
 
   .course-img-name h2{
     padding: 16px 0 16px 16px;
+
   }
 }
 
@@ -402,10 +425,7 @@ main{
   background-color: white;
   display: flex;
   flex-wrap: wrap;
-  /*flex-direction: column;*/
   text-align: center;
-  /*align-items: center;*/
-  border: 2px red solid;
 }
 
 .thesis-exhibit h1{
@@ -423,7 +443,6 @@ main{
   padding-bottom: 32px;
   max-width: 60%;
   flex-shrink: 1;
-  border: 2px green solid;
   text-align: left;
 }
 
@@ -444,14 +463,12 @@ main{
     min-width: 432px;
     max-width: 432px;
     float:right;
-    border: 5px yellow dashed;
 }
 
 .fisma{
   display: flex;
   height: 168px;
   padding: 16px;
-  border: 2px blue solid;
 }
 
 .fisma img{
@@ -468,4 +485,66 @@ main{
 
 .thesis-info p{
   font-size: 0.8em;
+}
+
+@media only screen and (max-width: 480px){
+
+
+  .thesis-left h2 p{
+    display: none;
+  }
+
+  .thesis-right,
+  .thesis-left h2, p{
+    display: none;
+  }
+
+  .thesis-left{
+    max-width: 100%;
+    margin: 0;
+    padding: 0 0 24px 0;
+  }
+}
+
+/*footer*/
+
+footer{
+  z-index: 100;
+  display: flex;
+  position: relative;
+  top: 64px;
+
+  justify-content: space-between;
+  padding: 12px 24px 40px 24px;
+  border-top: 1px lightgray solid;
+}
+
+.terms{
+  display: flex;
+}
+.terms h5,
+.copyright h5{
+  font-size: 0.8em;
+  font-weight: 400;
+  padding: 12px;
+}
+
+@media only screen and (max-width: 480px){
+  .copyright h5{
+    padding: 160px auto 160px 24px;
+    margin: 0;
+  }
+
+  .terms{
+    display: none;
+  }
+
+  footer{
+    padding: 0;
+    margin: 0;
+    padding-top: 16px;
+    padding-bottom: 16px;
+  }
+
+
 }
